--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^16.3.5"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.9",
@@ -26,4 +29,3 @@
     "vite": "^5.0.8"
   }
 }
-
