feat: add serial communication and data recording system
- Implement serial port listing, connection, and real-time data streaming in Rust
- Add live sensor data visualization with 5 channels (CH0-CH4) in ConnectionManager
- Create DataRecorder component for gesture labeling and CSV export
- Add calibration workflow (baseline and max bend capture)
- Implement data normalization in Rust backend
- Add save_recording command for structured CSV output with metadata
- Update gitignore to exclude separate repos (iot-sign-glove, mobile) and models
- Integrate Tauri event system for real-time sensor data updates
- Add i18n support for Turkish and English in data recording UI

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ app-icon.png
 src-tauri/target
 src-tauri/Cargo.lock
 
+# Separate Git Repos (ignore to prevent accidental commits)
+iot-sign-glove/
+mobile/
+
+# ML Models (large binary files)
+models/
