chore: update gitignore and improve UI components
- Add TelerehabilitationGloves-main to gitignore (reference code only)
- Update App.tsx with theme and language selection
- Improve DataRecorder component UI and functionality

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ dist-ssr
 # Generated files
 app-icon.png
 
+# Reference code (not part of our project)
+TelerehabilitationGloves-main/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
