Major update: 15-letter ASL recognition with ML model
Frontend:
- Added 15 ASL letter buttons (A-Y, excluding J,L,M,N,P,Q,R,U,Z)
- Updated SimulatorControl with auto-stop toggle
- Added confidence display and debug logs
- Improved UI/UX (removed nested scrollbars, emojis)
- Added internationalization for all new features

Backend (Rust):
- Integrated ML prediction via predict_ml.py
- Updated to use 15-letter model (rf_asl_15letters.pkl)
- Added model path resolution for bundled releases
- Fixed Python console window hiding on Windows

ML Integration:
- 15-letter Random Forest model (66.2% accuracy)
- Confidence booster for weak letters (T,C,X,O,S,E,A)
- Pattern verification (boosts confidence by 40-50% when pattern matches)
- Synthetic simulator with real patterns from external dataset

Cleanup:
- Removed temporary documentation files
- Added external datasets to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ mobile/
 
 # ML Models (large binary files)
 models/
+
+# External datasets (not part of this project)
+ASL-Deep-Learning-Model/
+Smart-Glove-Sign-Language-Predictor/
